@@ -1,5 +1,4 @@
 .pp-post {
-	overflow: hidden;
 	.pp-post-title {
 		font-size: 26px;
 		a {
@@ -13,7 +12,6 @@
 	}
 }
 .pp-post-thumbnail {
-	overflow: hidden;
 	img {
 		width: 100%;
 		-webkit-transition: all .25s linear;
